# kuasar

./: CLAUDE.md  Cargo.toml  Makefile
cmd/vmm-engine/: Cargo.toml
cmd/vmm-engine/src/: main.rs
docs/: design_issue.md  nanosandbox.md  snapshot.md
docs/nanosandbox/: nanosandbox-plan.md  nanosandbox.md  plan-issue.md  sandboxer-comparison.md
docs/proposals/: appliance_mode_arch_spec_cn.md  review_appliance_runtime_impl.md  review_guest_runtime_refactor.md
docs/proposals/appliance-sandbox-mode/: README.md  core-architecture-refactoring-spec.md
docs/proposals/application_snapshot/: README-zh.md
tests/e2e/configs/: container-vmm-blk.yaml  sandbox-vmm-blk.yaml
tests/e2e/src/: tests.rs
tools/kuasar-ctl/: Cargo.toml
tools/kuasar-ctl/src/: main.rs  snapshot.rs  template.rs
vmm/adapter-k8s/: Cargo.toml
vmm/adapter-k8s/src/: lib.rs  sandboxer.rs  task.rs  tests.rs
vmm/cloud-hypervisor/: Cargo.toml
vmm/cloud-hypervisor/src/: lib.rs
vmm/common/: Cargo.toml  build.rs
vmm/common/src/: cgroup.rs  lib.rs  storage.rs
vmm/common/src/api/: mod.rs
vmm/common/src/network/: address.rs  link.rs  mod.rs  route.rs
vmm/common/src/protos/: sandbox.proto  snapshot_mgmt.proto
vmm/engine/: Cargo.toml
vmm/engine/src/: config.rs  engine.rs  error.rs  instance.rs  legacy.rs  lib.rs  state.rs  tests.rs
vmm/guest-runtime/: Cargo.toml
vmm/guest-runtime/src/: lib.rs
vmm/init/: Cargo.toml
vmm/init/src/: hooks.rs  main.rs  mount.rs  protocol.rs  readiness.rs
vmm/qemu/: Cargo.toml
vmm/qemu/src/: lib.rs
vmm/runtime-vmm-task/: Cargo.toml
vmm/runtime-vmm-task/src/: lib.rs
vmm/sandbox/: Cargo.toml  config_clh.toml  config_clh_appliance.toml
vmm/sandbox/src/: admin.rs  args.rs  client.rs  config.rs  lib.rs  metrics_server.rs  profile.rs  sandbox.rs  vm.rs
vmm/sandbox/src/cloud_hypervisor/: appliance_factory.rs  appliance_hooks.rs  client.rs  config.rs  factory.rs  hooks.rs  mod.rs  snapshot.rs
vmm/sandbox/src/container/handler/: spec.rs
vmm/sandbox/src/guest_runtime/: appliance.rs  mod.rs  vmm_task.rs
vmm/sandbox/src/qemu/: factory.rs  hooks.rs  mod.rs
vmm/sandbox/src/snapshot/: error.rs  manager.rs  metrics.rs  mgmt_server.rs  mod.rs  post_restore.rs  store.rs  warm_pool.rs
vmm/sandbox/src/storage/: mod.rs
vmm/sandbox/src/stratovirt/: factory.rs  hooks.rs  mod.rs
vmm/sandbox/src/stratovirt/devices/: mod.rs  virtio_net.rs
vmm/sandbox/src/template/: mod.rs
vmm/scripts/image/: build.sh  build_erofs_image.sh  build_ext4_flat_image.sh  common.sh
vmm/scripts/image/centos/appliance/: binaries.list  build_rootfs.sh  rpm.list
vmm/stratovirt/: Cargo.toml
vmm/stratovirt/src/: lib.rs
vmm/task/src/: container.rs  device.rs  main.rs  sandbox.rs  sandbox_service.rs
vmm/vm-trait/: Cargo.toml
vmm/vm-trait/src/: hooks.rs  lib.rs  net.rs  vmm.rs
