[package]
name = "kuasar-ctl"
version = "0.1.0"
edition = "2021"
authors = ["The Kuasar Authors"]
description = "Kuasar diagnostic tool for troubleshooting Guest VMs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ttrpc = { version = "0.7", features = ["async"] }
protobuf = "3.2"
vmm-common = { path = "../../vmm/common" }

[dev-dependencies]
tempfile = "3.0"
