[package]
name = "vmm-adapter-k8s"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
vmm-engine       = { path = "../engine" }
vmm-vm-trait     = { path = "../vm-trait" }
vmm-guest-runtime = { path = "../guest-runtime" }
vmm-common       = { path = "../common" }
containerd-sandbox = { git = "https://github.com/kuasar-io/rust-extensions.git" }
containerd-shim  = { git = "https://github.com/kuasar-io/rust-extensions.git", features = ["async"] }
async-trait      = "0.1"
tokio            = { version = "1", features = ["sync", "rt", "macros"] }
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
anyhow           = "1.0"
tracing          = "0.1"
nix              = "0.24"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["full"] }
