[package]
name = "vmm-engine"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
vmm-vm-trait    = { path = "../vm-trait" }
vmm-guest-runtime = { path = "../guest-runtime" }
vmm-common      = { path = "../common" }
containerd-sandbox = { git = "https://github.com/kuasar-io/rust-extensions.git" }
async-trait     = "0.1"
tokio           = { version = "1", features = ["fs", "sync", "rt", "time", "macros"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
anyhow          = "1.0"
tracing         = "0.1"
hostname        = "0.3"
cgroups-rs      = "0.3.2"

[dev-dependencies]
tempfile = "3"
