[package]
name = "vmm-runtime-vmm-task"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
vmm-guest-runtime = { path = "../guest-runtime" }
vmm-common       = { path = "../common" }
containerd-sandbox = { git = "https://github.com/kuasar-io/rust-extensions.git" }
containerd-shim  = { git = "https://github.com/kuasar-io/rust-extensions.git", features = ["async"] }
ttrpc            = { git = "https://github.com/kuasar-io/ttrpc-rust.git", branch = "v0.7.1-kuasar", features = ["async"] }
async-trait      = "0.1"
tokio            = { version = "1", features = ["sync", "rt", "time", "macros"] }
anyhow           = "1.0"
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
tracing          = "0.1"
nix              = "0.24"
protobuf         = "3"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["full"] }
