[package]
name = "vmm-stratovirt"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
vmm-vm-trait       = { path = "../vm-trait" }
vmm-common         = { path = "../common" }
vmm-sandboxer      = { path = "../sandbox" }
containerd-sandbox = { git = "https://github.com/kuasar-io/rust-extensions.git" }
async-trait  = "0.1"
tokio        = { version = "1", features = ["sync", "rt", "time", "macros"] }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
anyhow       = "1.0"
tracing      = "0.1"
libc         = "0.2"
uuid         = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
