[package]
name = "vmm-vm-trait"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["sync"] }
containerd-sandbox = { git = "https://github.com/kuasar-io/rust-extensions.git" }
libc = "0.2"
